# harness

./: .env.example  .gitignore  .gitmodules  Cargo.toml  README.md  index.html  package-lock.json  package.json
crates/harness-chat/: Cargo.toml
crates/harness-chat/src/: agent_registry.rs  anchor_agent.rs  cancel.rs  context.rs  context_agent.rs  intent_agent.rs  lib.rs  memory_agent.rs  memory_resolver.rs  service.rs
crates/harness-chat/src/pipeline/: coalesce.rs  events.rs  mod.rs  xml_unwrap.rs
crates/harness-mcp/: Cargo.toml
crates/harness-mcp/src/: main.rs  server.rs
crates/harness-storage/: Cargo.toml
crates/harness-storage/src/: context_store.rs  db.rs  error.rs  lib.rs  memory.rs  messages.rs  schema.rs  sessions.rs  settings.rs
crates/harness-tools/: Cargo.toml
crates/harness-tools/src/: ingest.rs  lib.rs  maintenance.rs  provisional.rs
crates/harness-tools/src/builtins/: calculator.rs  get_time.rs  http_fetch.rs  memex.rs  mod.rs  read_file.rs
docs/: harness.md  multi-agent-context.md
docs/superpowers/plans/: 2026-04-26-harness-phase-2.md
docs/superpowers/specs/: 2026-04-26-harness-tauri-chat-design.md
plugins/harness-plugin/: README.md
plugins/harness-plugin/.claude-plugin/: plugin.json
plugins/harness-plugin/agents/: knowledge-builder.md
plugins/harness-plugin/skills/graph/: SKILL.md
plugins/harness-plugin/skills/query/: SKILL.md
plugins/harness-plugin/skills/remember/: SKILL.md
plugins/harness-plugin/skills/who/: SKILL.md
src/: App.vue  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: bridge.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: agents.rs  chat.rs  context.rs  knowledge.rs  mod.rs  sessions.rs  settings.rs
src/components/: AgentSelector.vue  LeftSidebar.vue  RightSidebar.vue
src/components/Layout/: Header.vue
src/components/chat/: ReasoningBlock.vue  StreamingIndicator.vue  ToolResultChip.vue  ToolUseChip.vue
src/components/composer/: IntentDropdown.vue
src/components/context/: AnchorCard.vue  CardList.vue  IntentBadge.vue
src/components/knowledge/: EntityPanel.vue  EntitySeedForm.vue  MemoryTimeline.vue  NetworkGraph.vue  ProvisionalPanel.vue
src/composables/: useGraphData.ts
src/pages/: Chat.vue  Home.vue  Knowledge.vue  Settings.vue
src/scss/: app.scss
src/services/: chat.ts  context.ts  knowledge.ts  parseStored.ts  settings.ts
src/stores/: chat.ts  context.ts  memory.ts
src/types/: chat.types.ts  context.types.ts  knowledge.types.ts
