[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/harness-storage",
    "crates/harness-chat",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Will Percey"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
surrealdb = { version = "2", features = ["kv-rocksdb", "kv-mem"] }

# strands-rs (sibling repo)
strands-core = { path = "../strands-rs/strands-core" }
strands-ollama = { path = "../strands-rs/strands-ollama" }
strands-openrouter = { path = "../strands-rs/strands-openrouter" }

# internal crates
harness-storage = { path = "crates/harness-storage" }
harness-chat = { path = "crates/harness-chat" }
