[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/harness-storage",
    "crates/harness-chat",
    "crates/harness-tools",
    "crates/harness-mcp",
]
# strands-rs and memex-core are git submodules. strands-rs has its own
# workspace; memex-core is a standalone package consumed via path dep.
# Keep them out of this workspace either way.
exclude = ["strands-rs", "memex-core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Will Percey"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
surrealdb = { version = "2", features = ["kv-rocksdb", "kv-mem"] }

# strands-rs (vendored as a git submodule at ./strands-rs)
# Local dev override: see .cargo/config.toml `paths` to redirect at the
# sibling working copy in ~/Documents/Projects/strands-rs.
strands-core = { path = "strands-rs/strands-core" }
strands-ollama = { path = "strands-rs/strands-ollama" }
strands-openrouter = { path = "strands-rs/strands-openrouter" }
strands-claude-cli = { path = "strands-rs/strands-claude-cli" }
strands-codex-cli = { path = "strands-rs/strands-codex-cli" }
strands-gemini-cli = { path = "strands-rs/strands-gemini-cli" }

# internal crates
harness-storage = { path = "crates/harness-storage" }
harness-chat = { path = "crates/harness-chat" }
harness-tools = { path = "crates/harness-tools" }
