[package]
name = "harness"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Harness — local agent chat playground"

[lib]
name = "harness_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
harness-storage.workspace = true
harness-chat.workspace = true
strands-core.workspace = true
strands-ollama.workspace = true
