[package]
name = "harness"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Harness — local agent chat playground"

[lib]
name = "harness_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# Crash + error reporting. DSN is captured at compile time via
# `option_env!("SENTRY_DSN")`; without it Sentry initialises in
# disabled mode and stays silent. Public clones therefore work
# without configuration; release builds set the env var to
# enable reporting.
sentry = { version = "0.34", default-features = false, features = ["backtrace", "contexts", "panic", "transport"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
harness-storage.workspace = true
harness-chat.workspace = true
harness-tools.workspace = true
strands-core.workspace = true
strands-ollama.workspace = true
dirs.workspace = true
surrealdb.workspace = true
