[package]
name = "harness-chat"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
harness-storage.workspace = true
strands-core.workspace = true
strands-ollama.workspace = true
strands-openrouter.workspace = true
strands-claude-cli.workspace = true
strands-codex-cli.workspace = true
strands-gemini-cli.workspace = true
harness-tools.workspace = true
memex-core = { path = "../../memex-core" }
surrealdb = { workspace = true }
dirs = { workspace = true }
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
async-trait.workspace = true
reqwest.workspace = true
uuid.workspace = true
