[package]
name = "harness-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
surrealdb.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
dirs.workspace = true
uuid.workspace = true
