[package]
name = "harness-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
strands-core.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
async-trait.workspace = true
reqwest.workspace = true
thiserror.workspace = true
tracing.workspace = true
evalexpr = "11"
memex-core = { path = "../../../world/desktop/src-tauri/memex-core" }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
